--- a/onebitcode/bootstrap-sass/05-componentes-bootstrap/index.html
+++ b/onebitcode/bootstrap-sass/05-componentes-bootstrap/index.html
@@ -9,6 +9,31 @@
     crossorigin="anonymous">
 </head>
 <body>
+    <header class="navbar navbar-expand-md bg-primary">
+        <div class="container-fluid">
+            <a href="" class="navbar-brand">
+                LOGO
+            </a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div id="navbarMain" class="collapse navbar-collapse">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Sobre</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Contato</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Produtos</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </header>
     <main class="container-fluid text-center mt-5">
         <div class="py-5 mx-auto w-50">
             <h1>Usando Componentes do Bootstrap</h1>
